style changes to merge