@@ -9,15 +9,15 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 
-import Interfaces.CompFactor;
-import Interfaces.Processing;
-import Interfaces.Response;
-import Interfaces.WebServer;
-import Responses.FactorResponse;
-import Responses.InitializationResponse;
-import Responses.InputResponse;
-import Responses.OutputResponse;
-import Responses.ReadResponse;
+import interfaces.CompFactor;
+import interfaces.Processing;
+import interfaces.Response;
+import interfaces.WebServer;
+import responses.FactorResponse;
+import responses.InitializationResponse;
+import responses.InputResponse;
+import responses.OutputResponse;
+import responses.ReadResponse;
 
 public class MultiThreadWebServer implements WebServer {
 
@@ -30,7 +30,7 @@ public class MultiThreadWebServer implements WebServer {
 	//Builder method for making sure the components get initialized properly
 	public static Optional<WebServer> initialize() {
     	MultiThreadWebServer newComponent = new MultiThreadWebServer();
-    	if(newComponent.coordinationInitializer().getStatus().equals(Response.Status.SUCCESS)) {
+    	if (newComponent.coordinationInitializer().getStatus().equals(Response.Status.SUCCESS)) {
     		return Optional.of(newComponent);
     	}
     	return Optional.empty();
@@ -60,7 +60,7 @@ public class MultiThreadWebServer implements WebServer {
 			throw new Exception("Component Not Initialized");
 		}
 		ReadResponse returned =	processingComponent.readData(inputSource);
-		if(returned.getStatus().equals(Response.Status.FAILURE)) {
+		if (returned.getStatus().equals(Response.Status.FAILURE)) {
 			System.out.println("InputSource produced error");
 			throw new Exception("Input data cannot be read");
 		}
@@ -74,7 +74,7 @@ public class MultiThreadWebServer implements WebServer {
 			throw new Exception("Component Not Initialized");
 		}	
 		OutputResponse outputSent = processingComponent.getOutputDestination(outputDestination);
-		if(outputSent.getStatus().equals(Response.Status.SUCCESS)) {
+		if (outputSent.getStatus().equals(Response.Status.SUCCESS)) {
 			return new OutputResponse(outputSent.getStatus(), "Output sent");
 		}
 		return new OutputResponse(Response.Status.FAILURE, "Output not recievd by processing component");
@@ -85,11 +85,11 @@ public class MultiThreadWebServer implements WebServer {
 	public FactorResponse factor(InputResponse nums, String outputPath) {
 		StreamSource factorables = new StreamSource(nums.getData());
 		FactorResponse factoringResponse = multiThreadFactoring(factorables);
-		if(factoringResponse.getStatus().equals(Response.Status.FAILURE)) {
+		if (factoringResponse.getStatus().equals(Response.Status.FAILURE)) {
 			return factoringResponse;
 		}
 		DataSource facotoredData = new DataSource(factoringResponse.getData()); 
-		if( processingComponent.receiveData(facotoredData, outputPath).getStatus().equals(factoringResponse.getStatus())) {
+		if ( processingComponent.receiveData(facotoredData, outputPath).getStatus().equals(factoringResponse.getStatus())) {
 			return factoringResponse;
 		}
 		return new FactorResponse(Response.Status.FAILURE);
@@ -120,7 +120,7 @@ public class MultiThreadWebServer implements WebServer {
 			try {
 				FactorResponse listOfFactors = future.get();
 				System.out.println(listOfFactors.getData().toString());
-				toReturn.ReciveFactors(listOfFactors.getData().getFirst());
+				toReturn.reciveFactors(listOfFactors.getData().get(0));
 			}catch (Exception e) {
 				throw new RuntimeException(e);
 			}
